--- a/trunk/chirp/glade/signin.ui
+++ b/trunk/chirp/glade/signin.ui
@@ -5,7 +5,9 @@
   <object class="GtkDialog" id="signInDialog">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Sign In</property>
+    <property name="resizable">False</property>
     <property name="modal">True</property>
+    <property name="destroy_with_parent">True</property>
     <property name="type_hint">normal</property>
     <property name="urgency_hint">True</property>
     <property name="has_separator">False</property>
@@ -161,6 +163,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -173,6 +177,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
